logging-monitoring/prometheus-operator/ingress/alertmanager-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: sre
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  rules:
  - host: alertmanager.staging.thegourmetplus.net
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-operated  
          servicePort: 9093
